--- a/css/layout/01/layout01.html
+++ b/css/layout/01/layout01.html
@@ -38,9 +38,11 @@
             让它包含所有内容元素，然后再给这个 div 应用边框和内边距
         </div>
     </aside>
-    <footer>为页脚应用 clear:both（ clear:left 效果也一样，因为这里只有左浮动元素），就可
+    <footer>
+        为页脚应用 clear:both（ clear:left 效果也一样，因为这里只有左浮动元素），就可
         以阻止它向上移动，不让它超过浮动元素的下方边界。这么一条简单的规则，就可
-        以保证页脚始终都位于最长栏的下方。</footer>
+        以保证页脚始终都位于最长栏的下方
+    </footer>
 </div>
 </body>
 </html>
