--- a/css/layout/02/02.css
+++ b/css/layout/02/02.css
@@ -1,11 +1,63 @@
+* {margin:0; padding:0;}
+body {font:1em helvetica, arial, sans-serif;}
 div#main_wrapper {
-    min-width: 6000px;
+    min-width: 600px;
     max-width: 1100px;
     margin: 0 auto;
-    background: url("../images/blue.jpg") repeat-y #eee;
+    background: url("../images/blue.jpg") repeat-y purple;
 }
 
 header {
     padding:5px 10px;
-    background:#3f7ccf;
+    background:rosybrown;
+    opacity: 0.9;
+}
+
+div#threecolwrap {
+    /*浮动强制它包围浮动的栏*/
+    float:left;
+    width:100%;
+    /*背景图片右对齐*/
+    background:url(../images/turquoise.png) top right repeat-y;
+}
+
+div#twocolwrap {
+    float:left;
+    width:100%;
+    /*把右栏拉到区块外边距腾出的位置上*/
+    margin-right:-210px;
+}
+
+nav {
+    float:left;
+    width:150px;
+    background:#f00;
+    padding:20px 0;
+}
+/*让子元素与栏边界保持一定距离*/
+nav > * {margin:0 10px;}
+article {
+    width:auto;
+    margin-left:150px;
+    /*在流动居中的栏右侧腾出空间*/
+    margin-right:210px;
+    background:#eee;
+    padding:20px 0;
+}
+/*让子元素与栏边界保持一定距离*/
+article > * {margin:0 20px;}
+aside {
+    float:left;
+    width:210px;
+    background:#ffed53;
+    padding:20px 0;
+}
+/*让子元素与栏边界保持一定距离*/
+aside > * {margin:0 10px;}
+footer {
+    clear:both;
+    width:100%;
+    text-align:center;
+    color: #dcd9c0;
+    background:#000;
 }
