--- a/css/layout/02/02.html
+++ b/css/layout/02/02.html
@@ -10,14 +10,46 @@
     <header>
         <h1>Three Column Fluid Center Layout</h1>
     </header>
-    <div id="threecolwrapper">
-        <div id="twocolwrapper">
-            <nav></nav>
-            <article>aaaa</article>
+    <div id="threecolwrap">
+        <div id="twocolwrap">
+            <nav>
+                <li><a href="">link1</a></li>
+                <li><a href="">link2</a></li>
+                <li><a href="">link3</a></li>
+            </nav>
+            <article>
+                三栏中的右栏是 210
+                像素宽。为了给右栏腾出空间，中栏 article 元素有一个 210 像素的右外边距。当然，
+                光有这个外边距只能把右栏再向右推 210 像素。别急，包围左栏和中栏的两栏外包
+                装上 210 像素的负右外边距，会把右栏拉回 article 元素右外边距（在两栏外包装内
+                部右侧）创造的空间内。中栏 aticle 元素的宽度是 auto（原文 100%有错误。 ——
+                译者注），因此它仍然会力求占据浮动左栏剩余的所有空间。可是，一方面它自己的
+                右外边距在两栏外包装内为右栏腾出了空间，另一方面两栏外包装的负右外边距又
+                把右栏拉到了该空间内。总之，这是个很巧妙的设计。
+                <br>
+                左栏的背景图片加在了 div#main_wrapper 上。右栏的
+                背景图片加在了 div#threecolwrap 上，而且让它沿该 div 的右侧垂直拼接。中栏的
+                背景色也加在了 div#main_wrapper 上，这个背景色实际上是整个布局的背景色。而
+                位于两侧的两栏的背景图片，以及页眉和页脚的背景色，都会覆盖这个背景色（子
+                元素覆盖父元素）。因此，只能在中栏看到该全局背景色。
+            </article>
         </div>
-        <aside></aside>
+        <aside>
+            有人可能会纳闷，这些栏怎么都跟布局一样高呢？实话跟你说吧，你看到的都是假
+            象！这里我采用了一种叫“人造栏”的技术，这样才让所有栏看起来都一样高了。
+            这个技术说来也简单，就是给包围栏的外包装元素应用与各栏同宽的背景图片和背
+            景色。外包装元素跟它们包含的栏不一样，它们的高度就是布局高度，当然与内容
+            区的高度相同。通过在它们的背景的垂直方向上重复拼接背景图片，就可以在视觉
+            上造成各栏与布局同高的假象。这个例子分别为左栏和右栏应用了不同的背景图片
+            （如图 5-11 所示），为流动的中栏应用了背景色。
+        </aside>
     </div>
-    <footer></footer>
+    <footer>
+        图片宽和栏宽一致就可以看起一样高了。
+        为页脚应用 clear:both（ clear:left 效果也一样，因为这里只有左浮动元素），就可
+        以阻止它向上移动，不让它超过浮动元素的下方边界。这么一条简单的规则，就可
+        以保证页脚始终都位于最长栏的下方
+    </footer>
 </div>
 </body>
 </html>
